--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <app-header />
 <main>
   <ul id="users">
+    @for(user of users; track user.id) {
     <li>
-      <app-user />
+      <app-user [user]="user" (select)="onSelectUser($event)" />
     </li>
+    }
   </ul>
+  <app-tasks [name]="selectedUser ? selectedUser.id : ''" />
+  <!-- <app-tasks [name]="selectedUser?.name" /> In case name is declared as optional on the user component -->
 </main>
