--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,31 @@
   <ul id="users">
     @for(user of users; track user.id) {
     <li>
-      <app-user [user]="user" (select)="onSelectUser($event)" />
+      <app-user
+        [selected]="user.id === selectedUserId"
+        [user]="user"
+        (select)="onSelectUser($event)"
+      />
     </li>
     }
   </ul>
-  <app-tasks [name]="selectedUser ? selectedUser.id : ''" />
-  <!-- <app-tasks [name]="selectedUser?.name" /> In case name is declared as optional on the user component -->
+  @if (selectedUser) {
+  <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name" />
+  } @else {
+  <p id="fallback">Select a user to see their tasks</p>
+  }
 </main>
+
+<!-- Approach to use structural directives ngFor & NgIf -->
+<!-- <main>
+  <ul id="users">
+    <li *ngFor="let user of users">
+      <app-user [user]="user" (select)="onSelectUser($event)" />
+    </li>
+  </ul>
+
+  <app-tasks *ngIf="selectedUser; else fallback" [name]="selectedUser!.name" />
+  <ng-template #fallback>
+    <p id="fallback">Select a user to see their tasks</p>
+  </ng-template>
+</main> -->
