--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -1,7 +1,7 @@
 <div class="backdrop" (click)="onCancel()"></div>
 <dialog open>
   <h2>Add Task</h2>
-  <form (bgSubmit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()">
     <p>
       <label for="title">Title</label>
       <input
